[gd_scene load_steps=6 format=3 uid="uid://codg67otdv1ql"]

[ext_resource type="FontFile" uid="uid://bn4blc6gnxne4" path="res://Font/Jersey15-Regular.ttf" id="1_38aua"]
[ext_resource type="Script" uid="uid://hyv4at8r63dd" path="res://Scripts/main_menu.gd" id="1_pha2q"]
[ext_resource type="PackedScene" uid="uid://vpdd72fy5qv5" path="res://Scenes/Menus/credit_menu.tscn" id="3_penys"]
[ext_resource type="PackedScene" uid="uid://cnkqxe2ath8s1" path="res://Scenes/Menus/setting_menu.tscn" id="4_aur2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aur2u"]
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 1)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("_start_button", "_options_button", "_credits_button", "_exit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pha2q")
_start_button = NodePath("VBoxContainer/Start")
_options_button = NodePath("VBoxContainer/Options")
_credits_button = NodePath("VBoxContainer/Credits")
_exit_button = NodePath("VBoxContainer/Exit")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aur2u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -151.0
offset_right = -19.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.0691907, 2.72)
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 21
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 21
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 21
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 21
text = "Exit"

[node name="Titre" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.50006
offset_top = -420.5
offset_right = -52.50006
offset_bottom = -378.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.619, 3.186)
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 41
text = "ENJAM"
horizontal_alignment = 1

[node name="Menus" type="Node" parent="."]

[node name="CreditMenu" parent="Menus" instance=ExtResource("3_penys")]
visible = false

[node name="BackButton" type="Button" parent="Menus/CreditMenu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -235.0
offset_right = 11.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.1599998, 1.7385365)
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 21
text = "Back"

[node name="SettingMenu" parent="Menus" instance=ExtResource("4_aur2u")]
visible = false

[node name="BackButton2" type="Button" parent="Menus/SettingMenu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -235.0
offset_right = 11.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.1599998, 1.7385365)
theme_override_fonts/font = ExtResource("1_38aua")
theme_override_font_sizes/font_size = 21
text = "Back"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Menus/CreditMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Menus/SettingMenu/BackButton2" to="." method="_on_back_button_2_pressed"]
